# lab-09-producer-consumer

./: CMakeLists.txt
include/: crawler.hpp  downloader.hpp  parser.hpp  root_certificates.hpp
scripts/: checks.sh
sources/: crawler.cpp  downloader.cpp  main.cpp  parser.cpp
